--- a/src/layout/navigationBar/navigation-bar.html
+++ b/src/layout/navigationBar/navigation-bar.html
@@ -10,7 +10,7 @@
 		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
 		        <span class='glyphicon glyphicon-menu-hamburger'></span>
 		      </button>
-		      <a class="navbar-brand" data-toggle="collapse" data-target="#navbar-collapse-1">
+		      <a class="navbar-brand">
 		        <img src="res/SeeCodeRunTitle.png" alt="${router.title}">
 		      </a>
 		    </div>
@@ -38,19 +38,19 @@
 					</div>
 				</li>
 				<li>
-					<div class="btn navbar-item" onclick="location.href='https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!'">
+					<div class="btn navbar-item" onclick="window.open('https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!', '_blank');">
 						<span class='glyphicon glyphicon-question-sign'></span>
 						<label>Help</label>
 					</div>
 				</li>
 				<li>
-					<div class="btn navbar-item" onclick="location.href='mailto:contact@seecode.run'">
+					<div class="btn navbar-item" onclick="window.open('mailto:contact@seecode.run', '_blank');">
 						<span class='glyphicon glyphicon-envelope'></span>
 						<label>Contact Us</label>
 					</div>
 				</li>
 				<li>
-					<div class="btn navbar-item" onclick="https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run'">
+					<div class="btn navbar-item" onclick="window.open('https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run', '_blank');">
 						<span class='glyphicon glyphicon-info-sign'></span>
 						<label>About	&nbsp;</label>
 						</div>
