--- a/src/layout/navigationBar/navigation-bar.html
+++ b/src/layout/navigationBar/navigation-bar.html
@@ -11,7 +11,11 @@
 		        <span class='glyphicon glyphicon-menu-hamburger'></span>
 		      </button>
 		      <a class="navbar-brand">
-		        <img src="res/SeeCodeRunTitle.png" alt="${router.title}">
+		        <!--<img src="res/SeeCodeRunTitle.png" alt="${router.title}">-->
+		       <i class="material-icons md-48">chevron_left</i>
+		       <i class="material-icons">cloud</i>
+		       <i class="material-icons">play_circle_outline</i>
+		       <i class="material-icons md-48">chevron_right</i>
 		      </a>
 		    </div>
 			<ul class="nav navbar-nav navbar-right" id="navbar-collapse-1">
