--- a/src/pastebin/pastebin.css
+++ b/src/pastebin/pastebin.css
@@ -1,37 +1,42 @@
+ul.nav .glyphicon {
+    padding-right: 2px;
+    font-size: 13px;
+}
+
+.nav-tabs > li > a {
+  border-radius: 0;
+}
+
+.nav-tabs > li > a {
+    padding-top: 0px;
+    padding-bottom: 8px;
+}
+
 ul.nav li a,
 ul.nav li a:visited {
     color: #888888;
     font-size: 13px;
     font-style: italic;
-}
-
-.nav-tabs > li > a
-{
-    padding-top: 5px; 
-    padding-bottom: 5px;
-}
-
-.glyphicon {
-    padding-right: 2px;
-    font-size: 13px;
-}
-
-
-ul.nav li a:hover,
-ul.nav li a:active {
-    background-color: #f8f8f8;
     border-style: solid;
     border-width: 2px;
     border-left: none;
     border-top: none;
     border-right: none;
+}
+
+ul.nav li a:hover {
+    border-left: none;
+    border-top: none;
+    border-right: none;
+}
+
+ul.nav .active a, ul.nav .active a:focus, ul.nav .active a:hover{
+    font-weight: bold;
+    border-left: none;
+    border-top: none;
+    border-right: none;
     border-bottom-color: #0066ff;
 }
-
-ul.nav .active a {
-    font-weight: bold;
-}
-
 
 .wrap {
     width: 100%;
@@ -48,5 +53,5 @@ ul.nav .active a {
     right: -1px; 
     top: 0; 
     bottom: 0; 
-    background-color: #eee;
+    background-color: #888888;
 }
