New git push automated task. fixed share action and improved welcome page and logo

--- a/src/share/share-box.css
+++ b/src/share/share-box.css
@@ -1,3 +1,26 @@
-.share-box {
-  border-color: blue;
+#shareBox {
+    margin-top: -4px; 
+    width: 355px;
+    height: 40px;
+}
+
+#shareDiv {
+    margin-top: -5px;
+}
+
+#shareTitle{
+  background-color: #0066ff;
+  color: white;
+  text-align: center;
+  font-size: 18px;
+}
+
+#copyButton {
+    position: absolute;
+    right: 6px;
+    bottom: -17px;
+}
+
+#copyButton:hover {
+    cursor: pointer;
 }
