--- a/styles/index.css
+++ b/styles/index.css
@@ -40,12 +40,22 @@ body {
     margin-right: -30px;
     display: inline;
 }
+
+.seecoderun-text-blue{
+    color: #0066ff;
+}
+
+.seecoderun-blue{
+    background-color: #0066ff;
+}
  
- .material-icons.md-giant { font-size: 200px; }
+ .material-icons.md-giant { 
+     font-size: 200px; 
+ }
  
  .splash .title {
    font-size: 64px;
-   text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
+   /*text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;*/
    text-transform: uppercase;
  }
  .splash .spinner-box {
