--- a/src/layout/navigationBar/navigation-bar.css
+++ b/src/layout/navigationBar/navigation-bar.css
@@ -1,9 +1,3 @@
-#shareBox {
-    padding-left: 2px;
-    word-wrap: break-word;
-    display: none;
-}
-
 .navbar-xs {
     min-height:28px;
     height: 28px;
@@ -18,6 +12,10 @@
     padding: 0px 4px;
     font-size: 16px;
     line-height: 20px;
+}
+
+.navbar-xs .navbar-brand .material-icons { 
+    color: #0066ff;
 }
 .navbar-xs .navbar-nav > li > a {
     padding-top: 0px;
