Improved gutter logic. Added resize events to js editor. Added synch between editor and gutter elements: height, line-height, font family and size

--- a/src/app.css
+++ b/src/app.css
@@ -4,13 +4,12 @@
    right: 0;
    top: 30px;
    bottom: 0;
-   overflow-x: hidden;
+   overflow-x: auto;
    overflow-y: auto;
-   z-index: 10;
  }
  
  .page-host {
-   padding-top: 2px;
+   padding-top: 0px;
  }
  
  
