--- a/src/layout/navigationBar/navigation-bar.html
+++ b/src/layout/navigationBar/navigation-bar.html
@@ -12,10 +12,10 @@
 		      </button>
 		      <a class="navbar-brand">
 		        <!--<img src="res/SeeCodeRunTitle.png" alt="${router.title}">-->
-		       <i class="material-icons md-48">chevron_left</i>
-		       <i class="material-icons">cloud</i>
-		       <i class="material-icons">play_circle_outline</i>
-		       <i class="material-icons md-48">chevron_right</i>
+		       <i class="material-icons md-48">&#xE5CB;</i>
+		       <i class="material-icons">&#xE2BD;</i>
+		       <i class="material-icons">&#xE039;</i>
+		       <i class="material-icons md-48">&#xE5CC;</i>
 		      </a>
 		    </div>
 			<ul class="nav navbar-nav navbar-right" id="navbar-collapse-1">
