--- a/src/layout/navigationBar/navigation-bar.css
+++ b/src/layout/navigationBar/navigation-bar.css
@@ -1,12 +1,19 @@
-.navbar-xs {
+#navigation-bar,
+#navigation-bar .navbar{
     min-height:28px;
     height: 28px;
+    margin-bottom: 0px;
     /*border-style: solid;*/
     /*border-width: 2px;*/
     /*border-left: none;*/
     /*border-top: none;*/
     /*border-right: none;*/
     /*border-bottom-color: #0066ff;*/
+}
+
+.navbar-xs .navbar-header{
+     min-height:28px;
+    height: 28px;
 }
 .navbar-xs .navbar-brand{
     padding: 0px 4px;
