--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -1,21 +1,25 @@
 .ace_editor {
-    overflow-y: hidden;
-    overflow-x: visible;
     border: 0px;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 0px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     height: 800px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .ace_scrollbar {
     display: none !important;
 }
  
- 
 .ace_gutter-cell.seecoderun-gutter-decoration {
     background-color: #FFF;
-    border-radius: 20px 0px 0px 20px;
+    border-radius: 10px 0px 0px 10px;
     box-shadow: 0px 0px 1px 1px #0066ff inset;
     background-repeat: no-repeat;
     background-position: 2px center;
