--- a/src/pastebin/pastebin.css
+++ b/src/pastebin/pastebin.css
@@ -1,33 +1,51 @@
+.box-shadow-bottom {
+    box-shadow: 0px 20px 20px -20px #888888;
+}
+
+.box-shadow-left {
+    box-shadow:inset 2px -1px 5px -4px #888888;
+}
+
+.box-shadow-right {
+    box-shadow:inset -2px -1px 5px -4px #888888;
+}
+
 #mainContainer{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    height: 100%;
+    height: 99.5%;
 }
 
 #main-splitter-left{
+    min-height: 100%;
+    height: 100%;
+    bottom: 0px;
     overflow-y: hidden;
     padding-right: 0px;
 }
 
 #main-splitter-right{
+    min-height: 100%;
+    height: 100%;
+    bottom: 0px;
     overflow-y: hidden;
     padding-left: 0px;
 }
 
-#codeContent{
-    min-height: 95%;
-    height: 95%;
-    bottom: 0px;
-    overflow-y: hidden;
-}
-
-#codeContent .fade {
+.tab-content .fade {
    -webkit-transition: opacity 0.07s linear;
       -moz-transition: opacity 0.07s linear;
        -ms-transition: opacity 0.07s linear;
         -o-transition: opacity 0.07s linear;
            transition: opacity 0.07s linear;
+}
+
+#js-container{
+    min-height: 100%;
+    height: 100%;
+    bottom: 0px;
+    overflow-y: hidden;
 }
 
 #right-splitter{
@@ -41,7 +59,6 @@
 
 #visualization-container{
     padding-top: 5px;
-    padding-right: 0px;
 }
 
 #visualization-container .panel {
@@ -78,6 +95,7 @@ ul.nav li a:visited {
     border-left: none;
     border-top: none;
     border-right: none;
+    margin-left: 1px;
 }
 
 ul.nav li a:hover {
@@ -94,10 +112,6 @@ ul.nav .active a, ul.nav .active a:focus, ul.nav .active a:hover{
     border-bottom-color: #0066ff;
 }
 
-.wrap {
-    width: 100%;
-    font-size: 0;
-}
 .resizable {
     width: 50%;
     display: inline-block;
@@ -105,6 +119,15 @@ ul.nav .active a, ul.nav .active a:focus, ul.nav .active a:hover{
 
 .ui-resizable-e { 
     cursor: e-resize; 
+    width: 2px; 
+    right: -1px; 
+    top: 0; 
+    bottom: 0; 
+    background-color: #888888;
+}
+
+.ui-resizable-w { 
+    cursor: w-resize; 
     width: 2px; 
     right: -1px; 
     top: 0; 
