--- a/src/layout/navigationBar/navigation-bar.html
+++ b/src/layout/navigationBar/navigation-bar.html
@@ -11,11 +11,12 @@
 		        <span class='glyphicon glyphicon-menu-hamburger'></span>
 		      </button>
 		      <a class="navbar-brand">
-		        <!--<img src="res/SeeCodeRunTitle.png" alt="${router.title}">-->
-		       <i class="material-icons md-48">&#xE5CB;</i>
-		       <i class="material-icons">&#xE2BD;</i>
-		       <i class="material-icons">&#xE039;</i>
-		       <i class="material-icons md-48">&#xE5CC;</i>
+		        <img src="res/SeeCodeRunIcon-32.png" alt="${router.title}">
+		       <!--<img src="res/SeeCodeRunTitle.png" alt="${router.title}">-->
+		       <!--<i class="material-icons md-48">&#xE5CB;</i>-->
+		       <!--<i class="material-icons">&#xE2BD;</i>-->
+		       <!--<i class="material-icons">&#xE039;</i>-->
+		       <!--<i class="material-icons md-48">&#xE5CC;</i>-->
 		      </a>
 		    </div>
 			<ul class="nav navbar-nav navbar-right" id="navbar-collapse-1">
