New Console window logic. Share message with slider. Chat layout imporved and beta for timestamp. Gutter layout improved with new resize action on editor. Error catching improved between htmlviewer and trace service. Trace Controller changed tooltip

--- a/src/chat/chat.css
+++ b/src/chat/chat.css
@@ -79,6 +79,7 @@
   background: #f8f8f8;
   border-style:solid;
   border-width: 0px 0px 0px 3px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
 }
 
 .seecoderun-chat .seecoderun-chat-toolbar>h2 {
@@ -177,13 +178,13 @@
 }
 
 .seecoderun-chat ul li {
-  margin-bottom: 1px;
+  /*margin-bottom: 1px;*/
   line-height: 24px;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
   border-style:solid;
   border-width: 0px 0px 0px 3px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
+  /*box-shadow: 1px 1px 2px rgba(0, 0, 0, .4);*/
   padding-left: 5px;
   word-wrap: break-word;
 }
@@ -194,11 +195,12 @@
 
 .seecoderun-chat ul .seecoderun-chat-username {
   margin-right: 10px
+  float: left;
 }
 
 .seecoderun-chat ul .seecoderun-chat-timestamp {
-  right: 0;
-  margin-left: 10px
+  float: right;
+  padding-right: 4px;
 }
 
 .seecoderun-chat footer {
