--- a/src/layout/navigationBar/navigation-bar.html
+++ b/src/layout/navigationBar/navigation-bar.html
@@ -11,7 +11,7 @@
 		        <span class='glyphicon glyphicon-menu-hamburger'></span>
 		      </button>
 		      <a class="navbar-brand">
-		        <img src="res/SeeCodeRunIcon-32.png" alt="${router.title}">
+		        <img src="res/SeeCodeRunIcon.png" alt="${router.title}">
 		       <!--<img src="res/SeeCodeRunTitle.png" alt="${router.title}">-->
 		       <!--<i class="material-icons md-48">&#xE5CB;</i>-->
 		       <!--<i class="material-icons">&#xE2BD;</i>-->
@@ -19,50 +19,52 @@
 		       <!--<i class="material-icons md-48">&#xE5CC;</i>-->
 		      </a>
 		    </div>
-			<ul class="nav navbar-nav navbar-right" id="navbar-collapse-1">
+			<ul id="navbar-collapse-1" class="nav navbar-nav navbar-right" >
+		        <li>
+		          <div>
+		          	<div id="shareBox">
+		            	<share-box shareBox.bind="shareBox"></share-box>
+		          	</div>
+		          	<span id="shareButton">
+		          		<span class='glyphicon glyphicon-share'></span>
+						<label>Share</label>
+					</span>
+				  </div>
+		        </li>
 				<li>
-					<div id="userlistButton" class="btn navbar-item">
+					<div id="userlistButton">
 						<span class='glyphicon glyphicon-user'></span>
 						<label>Users</label>
 					</div>
 				</li>
-				<li >
-		          <div id="shareButton" class="btn navbar-item" data-toggle="#shareBox" href="#">
-		          	<span class='glyphicon glyphicon-share'></span>
-					<label>Share</label>
-				  </div>
-		          <ul id="shareBox" class = "dropdown-menu">
-		            <share-box shareBox.bind="shareBox"></share-box>
-		          </ul>
-		        </li>
 				
 				<li>
-					<div id="chatButton" class="btn navbar-item">
+					<div id="chatButton">
 						<span class='glyphicon glyphicon-comment'></span>
 						<label>Chat</label>
 					</div>
 				</li>
 				<li>
-					<div class="btn navbar-item" onclick="window.open('https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!', '_blank');">
+					<div onclick="window.open('https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!', '_blank');">
 						<span class='glyphicon glyphicon-question-sign'></span>
 						<label>Help</label>
 					</div>
 				</li>
 				<li>
-					<div class="btn navbar-item" onclick="window.open('mailto:contact@seecode.run', '_blank');">
+					<div  onclick="window.open('mailto:contact@seecode.run', '_blank');">
 						<span class='glyphicon glyphicon-envelope'></span>
 						<label>Contact Us</label>
 					</div>
 				</li>
 				<li>
-					<div class="btn navbar-item" onclick="window.open('https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run', '_blank');">
+					<div onclick="window.open('https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run', '_blank');">
 						<span class='glyphicon glyphicon-info-sign'></span>
 						<label>About	&nbsp;</label>
 						</div>
 				</li>
 			</ul>
 		</nav>
-  		<user-list userList.bind="userList"></user-list>
+  		<user-list user-list.bind="userList"></user-list>
    		<chat chat.bind="chatBox"></chat>
 	</div>
 	
