--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,12 @@
 body {
-   padding-top: 0px;
+   padding: 0px;
    min-height: 100%;
    margin: 0;
  }
  
  @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
    body {
-     padding-top: 0px;
+     padding: 0px;
      min-height: 100%;
      margin: 0;
    }
@@ -18,7 +18,7 @@ body {
  
  @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
    body {
-     padding-top: 0px;
+     padding: 0px;
      min-height: 100%;
      margin: 0;
    }
@@ -65,10 +65,6 @@ body {
    text-align: center;
    display: inline-block;
    font-size: 100px;
- }
- 
- section {
-   margin: 0 20px;
  }
  
  .pictureDetail {
@@ -160,6 +156,34 @@ body {
  }
  
  @keyframes fadeInRight {
+   0% {
+     opacity: 0;
+     -webkit-transform: translate3d(100%, 0, 0);
+     -ms-transform: translate3d(100%, 0, 0);
+     transform: translate3d(100%, 0, 0)
+   }
+   100% {
+     opacity: 1;
+     -webkit-transform: none;
+     -ms-transform: none;
+     transform: none
+   }
+ }
+ 
+ @-webkit-keyframes fadeInLeft {
+   0% {
+     opacity: 0;
+     -webkit-transform: translate3d(-100%, 0, 0);
+     transform: translate3d(-100%, 0, 0)
+   }
+   100% {
+     opacity: 1;
+     -webkit-transform: none;
+     transform: none
+   }
+ }
+ 
+ @keyframes fadeInLeft {
    0% {
      opacity: 0;
      -webkit-transform: translate3d(100%, 0, 0);
