--- a/src/jsGutter/js-gutter.css
+++ b/src/jsGutter/js-gutter.css
@@ -5,9 +5,10 @@
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 0px;
-    padding-left: 4px;
+    padding-left: 7px;
     height: 800px;
     min-height: 100%;
+    margin-left: -7px;
 }
 
 .js-gutter-blur{
