--- a/src/chat/chat.css
+++ b/src/chat/chat.css
@@ -79,7 +79,6 @@
   background: #f8f8f8;
   border-style:solid;
   border-width: 0px 0px 0px 3px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
 }
 
 .seecoderun-chat .seecoderun-chat-toolbar>h2 {
@@ -216,7 +215,8 @@
 
 #chatMessageFeedbackSent, #chatMessageFeedbackNotSent {
   position: absolute;
-  right: 0;
+  top: 2px;
+  right: 2px;
   display: none;
   z-index: 2;
 }
