--- a/src/pastebin/pastebin.css
+++ b/src/pastebin/pastebin.css
@@ -12,38 +12,24 @@
 
 #mainContainer{
     position: relative;
-    margin-top: 22px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    height: 100%;
-    /*bottom: 0;*/
+    height: 99.5%;
     overflow: hidden;
 }
 
 #main-splitter-left{
-    /*margin-top: 22px;*/
-    min-height: 100%;
-    height: 100%;
+    margin-top: 22px;
     bottom: 0px;
-    /*overflow-y: hidden;*/
     padding-right: 0px;
 }
 
 #main-splitter-right{
-    min-height: 100%;
-    height: 100%;
+    margin-top: 22px;
     bottom: 0px;
-    /*overflow-y: hidden;*/
     padding-left: 0px;
-}
-
-.tab-content .fade {
-   -webkit-transition: opacity 0.07s linear;
-      -moz-transition: opacity 0.07s linear;
-       -ms-transition: opacity 0.07s linear;
-        -o-transition: opacity 0.07s linear;
-           transition: opacity 0.07s linear;
+    overflow-y: hidden;
 }
 
 #js-container{
@@ -59,24 +45,28 @@
 
 #right-splitter{
     bottom: 0px;
-    /*min-height: 100%;*/
     height: 100%;
-    /*margin-bottom: 0;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
+#right-splitter-top{
+   border-top: 1px solid #eee;
+}
 #right-splitter-bottom{
     bottom: 0px;
-    min-height: 100%;
+}
+
+#preview {
+    width: 100%;
     height: 100%;
-    margin-bottom: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow-y: auto;
-     z-index:2;
+}
+
+#htmlView {
+    border: none;
+    width: 100%;
+    height: 99%;
 }
 
 #visualization-container{
@@ -114,10 +104,7 @@ ul.nav .glyphicon {
     clear: both;
     position:fixed;
     top: 30px;
-    width: inherit;
 }
-
-
 
 .nav-tabs > li > a {
   border-radius: 0;
@@ -125,7 +112,7 @@ ul.nav .glyphicon {
 
 .nav-tabs > li > a {
     padding-top: 0px;
-    padding-bottom: 2px;
+    padding-bottom: 4px;
 }
 
 ul.nav li a,
@@ -134,10 +121,11 @@ ul.nav li a:visited {
     font-size: 13px;
     font-style: italic;
     border-style: solid;
-    border-width: 2px;
-    border-left: none;
-    border-top: none;
-    border-right: none;
+    /*border-width: 2px;*/
+    /*border-left: none;*/
+    /*border-top: none;*/
+    /*border-right: none;*/
+    border: none;
     margin-left: 1px;
 }
 
@@ -153,7 +141,25 @@ ul.nav .active a, ul.nav .active a:focus, ul.nav .active a:hover{
     border-top: none;
     border-right: none;
     border-bottom-color: #0066ff;
-    /*box-shadow: 2px 2px 1px -1px #888888;*/
+}
+
+.tab-content .fade {
+   -webkit-transition: opacity 0.07s linear;
+      -moz-transition: opacity 0.07s linear;
+       -ms-transition: opacity 0.07s linear;
+        -o-transition: opacity 0.07s linear;
+           transition: opacity 0.07s linear;
+}
+
+#main-splitter-left .tab-content {
+    border-top: 1px solid #eee;
+}
+
+.tab-content {
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 #code-section .resizable {
