--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -6,7 +6,6 @@
    border-radius: 1px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
    color: black;
-   /*max-width: 100%;*/
    padding: 3px 4px;
    position: absolute;
    z-index: 10;
@@ -26,7 +25,6 @@
 
 #gutterTooltip {
    position: absolute;
-   /*background-color: #FFF;*/
    background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.1));
    background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.1));
    border: 1px solid gray;
@@ -38,17 +36,12 @@
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    cursor: default;
-   /*word-wrap: break-word;*/
    line-height: normal;
    font-style: normal;
    font-weight: normal;
-   /*letter-spacing: normal;*/
    display: none;
    background-color: white;
    z-index: 999999;
-   /*min-width: 200px;*/
-
-   /*margin-bottom: 2px;*/
  }
 
 #gutterTooltip > i {
@@ -56,9 +49,7 @@
 }
 
 #gutterNavigatorSlider {
-   /*margin-top: 2px;*/
-   /*margin-left: 4px;*/
-   /*margin-right: 4px;*/
+   padding: 2px;
    min-width: 50px;
    display:inline-block;
 }
