--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -55,8 +55,8 @@
 
 .ace-chrome .ace_marker-layer .expression-highlight {
     position: absolute;
-    background: rgb(250, 250, 155);
-    border: 1px solid rgb(200, 200, 150);
+    background: #E5F1FB;
+    border: none;
 }
 
 .powered-by-firepad {
