--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -47,16 +47,29 @@
 /*    background-color: #E5F1FB;*/
 /*}*/
 
-.ace-chrome .ace_marker-layer .expression-range {
+.ace-chrome .ace_marker-layer .default-marker {
     position: absolute;
     background: rgb(250, 250, 155);
     border: 1px solid rgb(200, 200, 150);
 }
 
-.ace-chrome .ace_marker-layer .expression-highlight {
+.ace-chrome .ace_marker-layer .expression-marker {
     position: absolute;
     background: #E5F1FB;
     border: none;
+}
+
+.ace-chrome .ace_marker-layer .yellow-marker {
+    position: absolute;
+    background: rgb(250, 250, 155);
+    border: none;
+}
+
+.ace-chrome .ace_marker-layer .seecoderun-blue-marker {
+    position: absolute;
+    background: #00398D;
+    color: #3C8AFC;
+    border: 1px solid #00398D;
 }
 
 .powered-by-firepad {
